# EC3102-trial

./: .gitignore  Dockerfile  README.md  package.json  tailwind.config.js  vite.config.ts
Backend/: .dockerignore  Dockerfile  Dockerfile.new  main.py  pyproject.toml
Backend/assets/: trial-data.json
Backend/routers/: __init__.py  firebase.py  trial.py
Chart/: Chart.yaml  values.yaml
Chart/templates/: backend copy.yaml  backend.yaml  frontend.yaml  nginx.yaml
EC3102-trial-fe/src/: App.css  const.ts
EC3102-trial-fe/src/components/: Evidancelist.tsx
Frontend/: Dockerfile
Frontend/src/: App.tsx  apis.ts
Frontend/src/components/: Header.tsx  NameTag.tsx
Frontend/src/components/lifeHearts/: Heart.scss
Models/: trial.py
k8s/: backend.yaml
k8s/Trial/: Chart.yaml  values.yaml
k8s/Trial/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  frontend.yaml  hpa.yaml  ingress.yaml  role.yaml  rolebinding.yaml  service.yaml  serviceaccount.yaml
k8s/Trial/templates/tests/: test-connection.yaml
src/: App.tsx  apis.ts  hooks.ts  index.css  main.tsx
src/components/: Controls.tsx  DialogBox.tsx  Evidancelist.tsx
src/components/lifeHearts/: Heart.tsx  LifeHearts.tsx
trial/: Chart.yaml  values.yaml
trial/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
trial/templates/tests/: test-connection.yaml
